# polymarker-webui

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.yaml  dev-compose.yaml  makefile  pyproject.toml
.github/workflows/: lint.yml
etc/: nginx  polymarker-webui.service
genome_descriptions/: bol-1.0.toml  brapa-1.0.toml  cadenza-1.1.toml  cadenza-2.toml  chinese_spring_refseq-1.0.toml  chinese_spring_refseq-2.1.toml  chinese_spring_refseq_pseudomolecules-1.0.toml  chinese_spring_refseq_tetraploid-1.0.toml  claire-1.1.toml  darmor-bzh-4.1.toml  fielder-1.toml  glycine_max-2.1.toml  ibsc-2.toml  kronos-1.1.toml  kronos_collapsed_masked-1.1.toml  paragon-1.1.toml  paragon-3.toml  robigus-1.1.toml  secale_cereale_lo7-2.toml  svevo-2.toml  tu-2.0.toml
pmwui/: __init__.py  api.py  base.py  db.py  mail.py  polymarker.py  scheduler.py  schema.sql
pmwui.og/: __init__.py
pmwui/static/stylesheets/: style.css
pmwui/templates/: base.html  base.jinja
pmwui/templates/base/: about.html  about.jinja  cite.html  cite.jinja  designed_primers.html  designed_primers.jinja  index.html  index.jinja  results.html  results.jinja
pmwui/templates/components/: code_box.jinja
tests/: conftest.py  data.sql  test_db.py  test_factory.py
