[project]
name = "pmwui"
version = "1.1.0"
description = "A web interface for polymarker."
requires-python = ">= 3.9"
dependencies = [
    "flask",
    "click",
    "mariadb",
    "tomli",
    "flask_mail",
    "markdown",
    "werkzeug",
    "gunicorn",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.2",
    "pytest",
    "fawltydeps>=0.19.0",
    "build>=1.4.0",
    "coverage>=7.10.7",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pmwui"]
