[project]
name = "pmwui"
version = "1.1.3"
description = "A web interface for polymarker."
requires-python = ">= 3.9"
dependencies = [
    "flask>=3.1.1",
    "click>=8.1.8",
    "mariadb>=1.1.12",
    "tomli>=2.2.1",
    "flask_mail>=0.10.0",
    "markdown>=3.8",
    "werkzeug>=3.1.3",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.2",
    "pytest>=8.3.5",
    "fawltydeps>=0.19.0",
    "build>=1.4.0",
    "coverage>=7.10.7",
    "types-markdown>=3.10.0.20251106",
    "deptry>=0.23.1",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pmwui"]

[tool.mypy]
ignore_missing_imports = true
