[project]
name = "pmwui"
version = "1.1.4"
description = "A web interface for polymarker."
requires-python = ">= 3.9"
dependencies = [
    "flask",
    "click",
    "mariadb",
    "tomli",
    "flask_mail",
    "markdown",
    "werkzeug",
    "gunicorn",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "fawltydeps",
    "build",
    "coverage",
    "types-markdown",
    "deptry",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pmwui"]

[tool.mypy]
ignore_missing_imports = true
